# CodeSync

./: .gitignore  README.md
CodeSync/: .clang-format  CMakeLists.txt  argparse.c  argparse.h  commands.c  commands.h  main.c  repository.c  repository.h  utils.c  utils.h
